// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should navifation correctly 1`] = `
"<view class=\\"cub-grid cub-grid--border\\">
  <view class=\\"cub-grid-item\\" style=\\"flex-basis: 25%;\\">
    <view class=\\"cub-grid-item__content cub-grid-item__content--border cub-grid-item__content--center cub-grid-item__content--clickable\\">
      <view class=\\"cub-grid-item__text\\"></view>
    </view>
  </view>
</view>"
`;

exports[`should render default slot correctly 1`] = `
"<view class=\\"cub-grid cub-grid--border\\">
  <view class=\\"cub-grid-item\\" style=\\"flex-basis: 25%;\\">
    <view class=\\"cub-grid-item__content cub-grid-item__content--border cub-grid-item__content--center\\">Default Slot<view class=\\"cub-grid-item__text\\"></view>
    </view>
  </view>
</view>"
`;

exports[`should render gutter correctly 1`] = `
"<view class=\\"cub-grid\\" style=\\"padding-left: 20px;\\">
  <view class=\\"cub-grid-item\\" style=\\"flex-basis: 25%; padding-right: 20px;\\">
    <view class=\\"cub-grid-item__content cub-grid-item__content--border cub-grid-item__content--surround cub-grid-item__content--center\\">
      <view class=\\"cub-grid-item__text\\"></view>
    </view>
  </view>
  <view class=\\"cub-grid-item\\" style=\\"flex-basis: 25%; padding-right: 20px;\\">
    <view class=\\"cub-grid-item__content cub-grid-item__content--border cub-grid-item__content--surround cub-grid-item__content--center\\">
      <view class=\\"cub-grid-item__text\\"></view>
    </view>
  </view>
  <view class=\\"cub-grid-item\\" style=\\"flex-basis: 25%; padding-right: 20px;\\">
    <view class=\\"cub-grid-item__content cub-grid-item__content--border cub-grid-item__content--surround cub-grid-item__content--center\\">
      <view class=\\"cub-grid-item__text\\"></view>
    </view>
  </view>
  <view class=\\"cub-grid-item\\" style=\\"flex-basis: 25%; padding-right: 20px;\\">
    <view class=\\"cub-grid-item__content cub-grid-item__content--border cub-grid-item__content--surround cub-grid-item__content--center\\">
      <view class=\\"cub-grid-item__text\\"></view>
    </view>
  </view>
  <view class=\\"cub-grid-item\\" style=\\"flex-basis: 25%; padding-right: 20px; margin-top: 20px;\\">
    <view class=\\"cub-grid-item__content cub-grid-item__content--border cub-grid-item__content--surround cub-grid-item__content--center\\">
      <view class=\\"cub-grid-item__text\\"></view>
    </view>
  </view>
  <view class=\\"cub-grid-item\\" style=\\"flex-basis: 25%; padding-right: 20px; margin-top: 20px;\\">
    <view class=\\"cub-grid-item__content cub-grid-item__content--border cub-grid-item__content--surround cub-grid-item__content--center\\">
      <view class=\\"cub-grid-item__text\\"></view>
    </view>
  </view>
  <view class=\\"cub-grid-item\\" style=\\"flex-basis: 25%; padding-right: 20px; margin-top: 20px;\\">
    <view class=\\"cub-grid-item__content cub-grid-item__content--border cub-grid-item__content--surround cub-grid-item__content--center\\">
      <view class=\\"cub-grid-item__text\\"></view>
    </view>
  </view>
  <view class=\\"cub-grid-item\\" style=\\"flex-basis: 25%; padding-right: 20px; margin-top: 20px;\\">
    <view class=\\"cub-grid-item__content cub-grid-item__content--border cub-grid-item__content--surround cub-grid-item__content--center\\">
      <view class=\\"cub-grid-item__text\\"></view>
    </view>
  </view>
</view>"
`;

exports[`should render square correctly 1`] = `
"<view class=\\"cub-grid cub-grid--border\\">
  <view class=\\"cub-grid-item\\" style=\\"flex-basis: 50%; padding-top: 50%;\\">
    <view class=\\"cub-grid-item__content cub-grid-item__content--border cub-grid-item__content--center cub-grid-item__content--square\\">
      <view class=\\"cub-grid-item__text\\"></view>
    </view>
  </view>
  <view class=\\"cub-grid-item\\" style=\\"flex-basis: 50%; padding-top: 50%;\\">
    <view class=\\"cub-grid-item__content cub-grid-item__content--border cub-grid-item__content--center cub-grid-item__content--square\\">
      <view class=\\"cub-grid-item__text\\"></view>
    </view>
  </view>
  <view class=\\"cub-grid-item\\" style=\\"flex-basis: 50%; padding-top: 50%;\\">
    <view class=\\"cub-grid-item__content cub-grid-item__content--border cub-grid-item__content--center cub-grid-item__content--square\\">
      <view class=\\"cub-grid-item__text\\"></view>
    </view>
  </view>
  <view class=\\"cub-grid-item\\" style=\\"flex-basis: 50%; padding-top: 50%;\\">
    <view class=\\"cub-grid-item__content cub-grid-item__content--border cub-grid-item__content--center cub-grid-item__content--square\\">
      <view class=\\"cub-grid-item__text\\"></view>
    </view>
  </view>
</view>"
`;
